# cute-lights

./: .editorconfig  .gitignore  README.md  cava.py  cspell.json  effect.py  meson.build  pyproject.toml  requirements.txt
clib/: Cargo.toml  build.rs  cspell.json  cute_lights.h
clib/src/: discoverer.rs  frame.rs  lib.rs  light.rs  utils.rs
data/: dev.bedsteler20.CuteLights.desktop.in  dev.bedsteler20.CuteLights.gschema.xml  dev.bedsteler20.CuteLights.metainfo.xml.in  meson.build
data/icons/: meson.build
dotnet/: .editorconfig  .gitignore  Cargo.toml  CuteLight.Sdk.csproj  CuteLight.Sdk.sln  README.md  build.rs  publish.sh
dotnet/example/: CuteLight.Sdk.Example.csproj  Program.cs
dotnet/src/: Class1.cs  Frame.cs  Light.cs  LightColor.cs  LightDiscoverer.cs  NativeMethods.g.cs
effects/: album_art.py  pink.py  pop_out.py  rainbow.py  storm.py  viz.py
example/: Makefile  main.cc
langs/: CuteLightsSdk.cs  sdk.py
mods/factorio/cute_lights_factorio_wrapper/: Cargo.toml
mods/factorio/cute_lights_factorio_wrapper/src/: main.rs
po/: POTFILES  meson.build
python/: .gitignore  Cargo.toml
python/cute_light/: __init__.py
python/example/: blink.py  debug_info.py
python/src/: discover.rs  frame.rs  lib.rs  light.rs  utils.rs
rust/: .editorconfig  Cargo.toml  README.md  cspell.json
rust/examples/: blink.rs
rust/src/: config.rs  lib.rs
rust/src/integrations/: govee.rs  hue.rs  kasa.rs  mod.rs
rust/src/utils/: future.rs  json.rs  mod.rs
scripts/: rainbow.cute
sdk/: Cargo.toml  README.md  build.rs  cbindgen.toml
sdk/src/: c_abi.rs  config.rs  discover.rs  frame.rs  lib.rs
sdk/src/integrations/: govee.rs  hue.rs  kasa.rs  mod.rs
sdk/src/utils/: color.rs  future.rs  mod.rs
src/: cute_lights.gresource.xml  cute_lights.in  effect_loader.py  main.py  meson.build  window.blp  window.py
src/lib/lightkit/: __init__.py  audio.py  color.py  core.py  govee_kit.py  hue_kit.py  kasa_kit.py  meson.build  mpris.xml  openrgb_kit.py  smart_kit.py  smartthings.py  sound.py  utils.py
