[package]
name = "cute-light-clib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cute_lights = { path = "../rust" }
tokio = { version = "1.38.0", features = ["full"] }

[lib]
crate-type = ["cdylib"]
name = "cutelight"

[build-dependencies]
cbindgen = "0.26.0"
csbindgen = "1.9.1"
