[package]
name = "cutelights"
version = "0.1.0"
edition = "2021"

[features]
c_api = []

[dependencies]
async-trait = "0.1.81"
bincode = "1.3.3"
byteorder = "1.5.0"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
uuid = { version = "1.10.0", features = ["v4"] }

[lib]
crate-type = ["cdylib"]


[build-dependencies]
cbindgen = "0.26.0"
csbindgen = "1.8.0"
