[package]
name = "cutelights"
version = "0.1.0"
edition = "2021"
license = " GPL-3.0-or-later"
description = "A Rust library for controlling Smart Lights"


[dependencies]
async-trait = "0.1.81"
bincode = "1.3.3"
byteorder = "1.5.0"
colors-transform = "0.2.11"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
