light_kit_dir = moduledir / 'lib' / 'lightkit'

light_kit_sources = [
    '__init__.py',
    'core.py',
    'audio.py',
    'utils.py',
    'mpris.xml',
    'color.py',
    '__init__.py',
    'govee.py',
    'hue.py',
    'kasa.py',
    'openrgb.py',
    'smartthings.py',
]

install_data(light_kit_sources, install_dir: light_kit_dir)
